# Python-Minifier

./: .gitignore  .pytest.ini  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test.sh  validate.sh  version.txt
.github/workflows/: tag-and-release.yml  validate-code.yml
Personal_Python_Minifier.egg-info/: PKG-INFO  SOURCES.txt
minifier/: __init__.py  parser.py  parser_utils.py
personal_python_ast_optimizer/: flake_wrapper.py  futures.py  python_info.py
personal_python_ast_optimizer/factories/: minifier_factory.py
personal_python_ast_optimizer/parser/: __init__.py  config.py  excluder.py  exclusion_decorators.py  minifier.py  run.py  skipper.py  slots_adder.py  utils.py
personal_python_ast_optimizer/regex/: apply.py  classes.py
personal_python_minifier/: __init__.py  parser.py  parser_utils.py  python_info.py
personal_python_minifier/factories/: minifier_factory.py  node_factory.py
personal_python_minifier/parser/: __init__.py  config.py  excluder.py  exclusion_decorators.py  minifier.py  utils.py
personal_python_minifier/regex/: __init__.py  apply.py
personal_python_syntax_optimizer/factories/: minifier_factory.py
personal_python_syntax_optimizer/parser/: __init__.py  config.py  exclusion_decorators.py  minifier.py
personal_python_syntax_optimizer/regex/: apply.py
personal_python_syntax_optimizer/slots/: adder.py  slots_adder.py
tests/: utils.py
tests/parser/: conftest.py  test_assert.py  test_assign.py  test_class.py  test_constant_folding.py  test_continue.py  test_exception.py  test_excludes.py  test_real.py  (+9 more)
(+1 files in other folders)
