[project]
authors         = [
    {name = "James Demetris"},
]
name            = "personal-python-ast-optimizer"
readme          = "README.md"
requires-python = ">=3.10"
dependencies    = [
  "autoflake==2.3.1"
]
dynamic         = ["version"]

[tool.setuptools.dynamic]
version         = {file = "version.txt"}
